// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly for a basic list 1`] = `
.c2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c2:focus:not(:focus-visible) {
  outline: none;
}

.c3 {
  margin-bottom: 0.2rem;
}

.c1 {
  list-style: unset;
  list-style-type: none;
}

.c1:not(:last-child) {
  margin-bottom: 1rem;
}

.c1 .c0 {
  margin-left: 1rem;
}

<ul
  class="c0 c1 c2"
>
  <li
    class="c3 c2"
  >
    Item 1
  </li>
  <li
    class="c3 c2"
  >
    Item 2
  </li>
  <li
    class="c3 c2"
  >
    Item 3
  </li>
  <li
    class="c3 c2"
  >
    Item 4
  </li>
</ul>
`;

exports[`renders correctly for a list with styles 1`] = `
.c2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c2:focus:not(:focus-visible) {
  outline: none;
}

.c3 {
  margin-bottom: 0.2rem;
}

.c1 {
  list-style: unset;
  list-style-type: none;
}

.c1:not(:last-child) {
  margin-bottom: 1rem;
}

.c1 .c0 {
  margin-left: 1rem;
}

<div>
  <ul
    class="c0 c1 c2"
    style="list-style-type: disc; list-style-position: inside;"
  >
    <li
      class="c3 c2"
    >
      Item 1
    </li>
    <li
      class="c3 c2"
    >
      Item 2
    </li>
  </ul>
  <ul
    class="c0 c1 c2"
    style="list-style-type: circle; list-style-position: inside;"
  >
    <li
      class="c3 c2"
    >
      Item 1
    </li>
    <li
      class="c3 c2"
      style="list-style-type: georgian;"
    >
      Item 2
    </li>
    <ul
      class="c0 c1 c2"
      style="list-style-type: circle;"
    >
      <li
        class="c3 c2"
      >
        Item 1
      </li>
      <li
        class="c3 c2"
      >
        Item 2
      </li>
    </ul>
  </ul>
</div>
`;

exports[`renders correctly for horizontal lists 1`] = `
.c2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c2:focus:not(:focus-visible) {
  outline: none;
}

.c3 {
  margin-bottom: 0.2rem;
}

.c4 .c0 {
  margin-left: 1rem;
}

.c5 .c0 {
  margin-left: 1rem;
}

.c5 .c0 {
  list-style-type: lower-alpha;
}

.c5 .c0 .c0 {
  list-style-type: lower-roman;
}

.c1 {
  list-style: unset;
  list-style-type: none;
}

.c1:not(:last-child) {
  margin-bottom: 1rem;
}

.c1 .c0 {
  margin-left: 1rem;
}

.c1 li {
  display: inline-block;
  margin-right: 1rem;
  margin-bottom: unset;
}

<div>
  <ul
    class="c0 c1 c2"
  >
    <li
      class="c3 c2"
    >
      Item 1
    </li>
    <li
      class="c3 c2"
    >
      Item 2
    </li>
    <li
      class="c3 c2"
    >
      Item 3
    </li>
    <li
      class="c3 c2"
    >
      Item 4
    </li>
  </ul>
</div>
`;

exports[`renders correctly for ordered lists 1`] = `
.c2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c2:focus:not(:focus-visible) {
  outline: none;
}

.c3 {
  margin-bottom: 0.2rem;
}

.c4 .c0 {
  margin-left: 1rem;
}

.c1 {
  list-style: unset;
  list-style-type: none;
}

.c1:not(:last-child) {
  margin-bottom: 1rem;
}

.c1 .c0 {
  margin-left: 1rem;
}

.c1 {
  list-style-type: decimal;
}

.c1 .c0 {
  list-style-type: lower-alpha;
}

.c1 .c0 .c0 {
  list-style-type: lower-roman;
}

<div>
  <ol
    class="c0 c1 c2"
    style="list-style-position: inside;"
  >
    <li
      class="c3 c2"
    >
      Item 1
    </li>
    <li
      class="c3 c2"
    >
      Item 2
    </li>
    <ol
      class="c0 c1 c2"
    >
      <li
        class="c3 c2"
      >
        Item 3
      </li>
      <ol
        class="c0 c1 c2"
      >
        <li
          class="c3 c2"
        >
          Item 4
        </li>
      </ol>
    </ol>
  </ol>
</div>
`;
